Fix rights page overlap bug

--- a/rights-style.css
+++ b/rights-style.css
@@ -7,13 +7,13 @@
     background-color: #1875d1;
     margin-bottom: 2%;
     border: none;
-    height: 10rem;
+    height: 5rem;
     width: 20rem;
     outline: none;
 }
 
 #text-row {
-    height: 20vh;
+    
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
